<resources>
    <string name="app_name">MoveOn</string>
    <string name="landing_activity_message">Service for your best Health &amp; Cross Fit</string>

    // Button
    <string name="button_text_guide_next">다음</string>
    <string name="button_text_guide_finish">완전히 이해했어요!</string>
    <string name="button_text_signup_finish">가입하기</string>

    // Toast
    <string name="toast_signup_success_message">회원가입이 완료되었습니다.</string>
    <string name="toast_signup_failure_message">회원가입에 실패했습니다.</string>
    <string name="toast_login_success_message">로그인에 성공했습니다.</string>
    <string name="toast_login_failure_message">로그인에 실패했습니다.</string>

    // used in GuideActivity
    <string name="guide_01_title">매일 쌓이는 나의 기록</string>
    <string name="guide_03_title">내 몸에 맞는 맞춤 운동 추천해요</string>
    <string name="guide_04_title">완료</string>
    <string name="guide_01_message">꾸준함이 결과로 이어집니다</string>
    <string name="guide_03_message">매일 필요한 운동을 알려드립니다</string>
    <string name="guide_04_message">모든 설정이 완료되었습니다!</string>

    // used in LoginActivity
    <string name="login_title">로그인</string>
    <string name="login_phone_number_text">휴대폰 번호</string>
    <string name="login_email_id_text">이메일 / 아이디</string>
    <string name="login_hint_phone_number">휴대폰 번호</string>
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_password">비밀번호</string>
    <string name="login_find_password_message">비밀번호를 잃어버리셨나요?</string>
    <string name="login_sign_up_text">회원가입</string>
    <string name="login_email_valid_error_message">이메일을 입력해주세요.</string>
    <string name="login_phone_valid_error_message">휴대폰 번호를 입력해주세요.</string>
    <string name="login_password_valid_error_message">비밀번호를 입력해주세요.</string>
    // used in SignUpActivity
    <string name="signup_title">회원가입</string>
    <string name="signup_user_role">사용자 유형</string>
    <string name="signup_user_type_user">사용자</string>
    <string name="signup_user_type_admin">관리자</string>
    <string name="signup_user_name">사용자 이름</string>
    <string name="signup_user_email">이메일</string>
    <string name="signup_user_phone">휴대폰 번호</string>
    <string name="signup_user_password">비밀번호</string>
    <string name="signup_password_confirm">비밀번호 확인</string>
    <string name="signup_user_name_hint">사용자 이름을 입력해주세요</string>
    <string name="signup_user_email_hint">이메일을 입력해주세요</string>
    <string name="signup_user_phone_hint">휴대폰 번호를 입력해주세요</string>
    <string name="signup_user_password_hint">비밀번호를 입력해주세요</string>
    <string name="signup_password_confirm_hint">비밀번호를 한번 더 입력해주세요</string>
    <string name="signup_name_valid_error_message">이름을 입력해주세요.</string>
    <string name="signup_email_valid_error_message">이메일을 입력해주세요.</string>
    <string name="signup_phone_valid_error_message">휴대폰 번호를 입력해주세요.</string>
    <string name="signup_password_valid_error_message">비밀번호를 입력해주세요.</string>
    <string name="signup_password_confirm_valid_error_message">비밀번호 확인을 입력해주세요.</string>
    <string name="signup_password_mismatch_valid_error_message">비밀번호가 일치하지 않습니다.</string>
</resources>
