<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/signup_user_role"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/user_type_user_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/background_login_button"
                android:gravity="center"
                android:text="@string/signup_user_type_user"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_type_admin_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/background_login_edittext"
                android:gravity="center"
                android:text="@string/signup_user_type_admin"
                android:textColor="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/signup_user_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login_edittext"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp">

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/signup_user_name_hint"
                android:paddingVertical="8dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/name_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/error_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/signup_user_email"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login_edittext"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/signup_user_email_hint"
                android:inputType="textEmailAddress"
                android:paddingVertical="8dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/email_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/error_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/signup_user_phone"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login_edittext"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:background="@null"
                android:hint="@string/signup_user_phone_hint"
                android:inputType="phone"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/phone_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/error_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/signup_user_password"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login_edittext"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/signup_user_password_hint"
                android:inputType="textPassword"
                android:paddingVertical="8dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/password_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/error_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/signup_password_confirm"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login_edittext"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp">

            <EditText
                android:id="@+id/password_confirm_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/signup_password_confirm_hint"
                android:inputType="textPassword"
                android:paddingVertical="8dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/password_confirm_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/error_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/signup_button"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="28dp"
            android:text="@string/button_text_signup_finish" />

    </LinearLayout>

</ScrollView>
